# eternal-torment

./: .devcontainer  .gitignore  Makefile.am  NEWS  README.md  bootstrap.sh  configure.ac  math.cbp  math.layout
.gemini/: .geminiignore  CONTEXT.md  GEMINI.md
.github/: c-cpp.yml
.github/workflows/: c-cpp.yml
CODE/: README.md
CODE/assembly/: fileio.s
CODE/hackerrank/python/: exceptions.py
CODE/linked-lists/: linked_list1.py
CODE/projecteuler.net/problem1/: main.py
CODE/projecteuler.net/problem31/: main.py
CODE/projecteuler.net/problem5/: main.py
HAHAFUN/FIZZBUZZ/: .gitignore  bootstrap.sh
HAHAFUN/FIZZBUZZ/c/: Makefile.codelite  README.md  ayy.project  ayy.txt  ayylmao  ctest  prog.c
HAHAFUN/FIZZBUZZ/clojure/: README.md
HAHAFUN/FIZZBUZZ/erlang/: ayy_lmao.erl
HAHAFUN/SpinningCube/: Makefile.am  README.md
HAHAFUN/cube1/: Makefile.am  cube1
HAHAFUN/freeglut/: Makefile.am  freeglut-cube.c
HAHAFUN/mandelbrot/: README.md  fractal  fractal.c  julia-cube.c  julia-reshape.c  julia.ppm.c  swirly
HAHAFUN/maze1/: README.md
HAHAFUN/noise/: README.md  ofApp.h
SpinningCube/: Makefile.am  readme.txt  spin
SpinningCube/Visual Studio/: SpiningCube.vcproj
ass/: Makefile.am  configure.ac  hello.s
container/: Containerfile  Dockerfile  Makefile.am  README.md
container/files/: io.podman.dhcp.service  io.podman.dhcp.socket
container/puzzle1/: Containerfile  Dockerfile  README.md
cube1/: Makefile.am  README.md
doc/: README.md  openbsd.md
docs/: README.md  cluster.gem.tex  ducks.tex  eternal_torment_summary.tex  reading-list.tex
docs/drawio-nn-templates/: LICENSE  NN Model.xml
drawio-nn-templates/: NN Basic.xml  README.md
freeglut/: Makefile.am  README.md
include/: README.md
maze1/: binary_tree.rb  cell.rb  grid.rb  ruby.txt
models/ml-gnn/: .envrc  .gitignore  LICENSE  Makefile.am  README.md  SECURITY.md  apt-packages.txt  bootstrap.sh  configure.ac  logging.conf  ml-gnn.cbp  setup.py  tox.ini
models/ml-gnn/.dvc/: config
models/ml-gnn/.github/: build.yml  latex.yml
models/ml-gnn/.github/ISSUE_TEMPLATE/: bug_report.md
models/ml-gnn/.github/workflows/: bandit.yml  cloudbot-call.yml
models/ml-gnn/cluster/: Makefile.am  README.md  requirements.txt
models/ml-gnn/container/: Dockerfile  Dockerfile.cluster  Dockerfile.collection  Dockerfile.dl-tf  Dockerfile.train  Makefile.am  docker-compose.yml
models/ml-gnn/dataset/: README.md  dns.gephi  gke_cluster.gephi  test1.gephi  test2.gephi  test3.gephi
models/ml-gnn/docs/: cluster_build.md  gke_build.md  manage_storage_key.md  todo.md
models/ml-gnn/docs/paper/: Dockerfile  Makefile.am  README.md  gnn.tex  mybib.bib  preamble.tex  title.tex
models/ml-gnn/docs/paper/code/: .terraform.lock.hcl  graph.dot  main.tf
models/ml-gnn/docs/paper/mainmatter/: 01-introduction.tex  02-primer.tex  03-collection.tex  04-preparation.tex  05-visualization.tex
models/ml-gnn/docs/presentation/: Makefile.am  README.md  gnn-pres.tex  preamble.tex  project.dot  requirements.txt
models/ml-gnn/presentation/: Makefile.am
models/ml-gnn/src/: README.md  config.ini.in  logo.txt  src.pyproject
models/ml-gnn/src/collection/: README.md  collection.py  requirements.txt  trusted.gpg
models/ml-gnn/src/training/: Dockerfile  README.md  requirements.txt  resolv.conf  sources.list  training.py
models/ml-gnn/src/visualize/: README.md  requirements.txt  visualize.py
models/ml-gnn/test/: Makefile.am  README.md  requirements-test.txt  test_print_logo.py
models/ml-gnn/yaml/training/: README.md  pod.yaml
models/model-html/: .envrc  .gitignore  Dockerfile  README.md  data.dvc  requirements.txt
noise/: README.md
palm-api/src/: bard_is_super_fun.py  dg.py  test_api.py
spinning-cube/: Cube-linux  Cube.c  Makefile.am
src/: Makefile.am  README.md  funk.s  main.c  src.tex
src/FIZZBUZZ/: README.md  ayy_lmao.s  fizzbuzz.tex
src/FIZZBUZZ/c/: aay.lmao.c  ayy.c  ayy.mk  ayy.workspace  configure.ac  prog.h
src/FIZZBUZZ/c/Debug/: ayy  src_ayylmao.c.o.d
src/FIZZBUZZ/c/include/: ayylmao.h
src/FIZZBUZZ/c/src/: ayy_lmao  ayylmao.c
src/FIZZBUZZ/elixir/: Elixir.Ayy.beam  README.md  ayylmao.exs
src/FIZZBUZZ/elixir/ayylmao/: README.md  mix.exs
src/FIZZBUZZ/erlang/: fb-erlang.tex  fizzbuz.erl
src/FIZZBUZZ/fizzbuzz/: fizzbuzz.1
src/FIZZBUZZ/fizzbuzz.xcodeproj/: ._project.xcworkspace
src/FIZZBUZZ/fizzbuzz/fizzbuzz/fizzbuzz/: main.c
src/FIZZBUZZ/fizzbuzz/fizzbuzz/fizzbuzz.xcodeproj/: project.pbxproj
src/FIZZBUZZ/go/src/ayy/: ayy.go
src/FIZZBUZZ/java/: README.md  fizzbuzz.java  streams.java
src/FIZZBUZZ/lisp/: README.md
src/FIZZBUZZ/nasm/: README.md  ayy.asm  ayy2.asm
src/FIZZBUZZ/perl/: README.md
src/FIZZBUZZ/python/: fizz.py  python_queue.py  reverse_lookup.py
src/FIZZBUZZ/ruby/: README.md  fizzbuzz.rb
src/FIZZBUZZ/visual_basic/AyyLmao/Properties/: AssemblyInfo.cs
src/FIZZBUZZ/visual_basic/AyyLmaoVB/My Project/: AssemblyInfo.vb.rename  Settings.Designer.vb
src/SpinningCube/: README.md  main.c
src/SpinningCube/Visual Studio/: SpiningCube.sln
src/ass/: Makefile.am  configure.ac  funk.s  hello.s  prompt.txt  setup.sh  shift.s
src/ass-intel-x86/: Makefile.am  README.md  funk  funk.s
src/betty-lab/: README.md
src/cube1/: cube1
src/freeglut/: README.md  fg-cube
src/hackerrank/: capitalize.py
src/mandelbrot/: README.md  cb  crystal-ball.c  fractal-breakdown.tex  jr  julia  julia-cube  swirly.c
src/maze1/: README.md  binary_tree.rb  binary_tree_demo.rb  cell.rb  grid.rb
src/noise/: ofApp.cpp
src/palm-api/: my_story.txt  note.txt
src/palm-api/images/: graph.dot
src/palm-api/src/: b1.py  match_bpm.py
src/projecteuler.net/problem2/: main.py
src/projecteuler.net/problem3/: main.py
src/railfence/: README.md  railfence.py  railfence.tex
src/tensorflow/: Dockerfile  README.md  requirements.txt  tensorflow.tex  tf-pod.yaml  tf.py
src/trithemius/: README.md  tc.py  tri.tex  trithemius.c  trithemius.py
src/vigenère/: README.md  vigenère.py
static/: README.md  index.html
static/images/: .gitattributes  README.md  dead_plane.kra  fix.sh  lampshade.avif
(+36 files in other folders)
